--- a/frontend/src/components/DynamicMasonryGrid.css
+++ b/frontend/src/components/DynamicMasonryGrid.css
@@ -4,10 +4,8 @@
   justify-content: center;
   text-align: center;
   height: 100%;
-  /* padding: 10px; */
   box-sizing: border-box;
   font-size: 14px;
-  /* line-height: 1.4; */
   word-wrap: break-word;
 }
 
@@ -29,13 +27,7 @@
   background-color: #0056b3;
 }
 
-.grid {
-  /* margin-left: -10px;
-  margin-right: -10px; */
-}
-
 .masonry {
-  /* background: #ccc; */
   width: 450px;
   max-width: 450px;
   margin: 0 auto;
@@ -48,7 +40,6 @@
 
 .item {
   position: relative;
-  /* box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); */
   background: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -60,22 +51,16 @@
   background: white;
   width: 100%;
   height: 100%;
-  /* display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px; */
 }
 
-/* Puzzle notch overlay styles */
 .puzzle-notch {
-  background-image: url("../assets/puzzle.svg");
+  background-image: url("puzzle.svg");
   background-size: contain;
   background-repeat: no-repeat;
   pointer-events: none;
   z-index: 10;
 }
 
-/* Default rotations for each side */
 .top {
   transform: rotate(0deg);
 }
@@ -92,7 +77,6 @@
   transform: rotate(-90deg);
 }
 
-/* Fake box styling */
 .fake-box {
   opacity: 0;
   background: #dddddd;
@@ -122,14 +106,13 @@
   height: 100%;
 }
 .masked-container {
-  /* Using an external SVG file as the mask */
   mask: url("Female_Shilloute.svg") no-repeat center / contain;
   -webkit-mask: url("Female_Shilloute.svg") no-repeat center / contain;
 }
 
 .packery-grid {
   width: 100%;
-  max-width: 1200px; /* or your desired max width */
+  max-width: 1200px;
 }
 
 .item.is-dragging {
